--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="content">
             <div id="home" class="tab active">
                 <div class="floatBorder">
-                    <img src="images/1.webp" alt="я">
+                    <img src="images/1.jpg" alt="я" width="512px">
                 </div>
                 <div class="home__text">
                     <h2>Стрижко Евгений Алексеевич</h2>
@@ -38,12 +38,13 @@
                 </div>
             </div>
             <div id="location" class="tab">
-                <h2>Местоположение</h2>
-                <p>Я родился в городе Смоленск...</p>
+                <h2>Детство</h2>
+                <p>Я родился в станице Каневской. Детство прошло в станице Бриньковской. В возрасте 3 лет я начал ходить в детский сад №4 "Веселый ручеек" (<a href="https://yandex.ru/maps/-/CHF1zRz5" target="_blank">46.035083, 38.584889</a>). Окончил его спустя 3 года.</p>
             </div>
             <div id="school" class="tab">
                 <h2>Школа</h2>
-                <p>Я учусь в школе №...</p>
+                <p>Я учился в 3-х разных школах из-за работы моей мамы. Сначала я учился в МБОУ СОШ №15 в поселке Ахтарском (<a href="https://yandex.ru/maps/-/CHF1z0oI" target="_blank">46.004528, 38.337972</a>). Первый класс в этой школе я так и не окончил.</p>
+                <p>Продолжил учиться в первом классе я в МБОУ ООШ №34 им. В. М. Ткачева (<a href="https://yandex.ru/maps/-/CHF1v-3v" target="_blank">46.057649, 38.311968</a>)</p>
             </div>
             <div id="college" class="tab">
                 <h2>Колледж</h2>
